test/corpus/examples.txt
================================================================================
Simple
================================================================================

Output out.gif
Type "Whatever you want"
Sleep 1s

--------------------------------------------------------------------------------

(program
  (command
    (output
      (path)))
  (command
    (type
      (string)))
  (command
    (sleep
      (time))))

================================================================================
Shell
================================================================================

Output out.gif
Set Shell "zsh"
Type "echo $0"
Enter
Sleep 1s

--------------------------------------------------------------------------------

(program
  (command
    (output
      (path)))
  (command
    (set
      (setting
        (string))))
  (command
    (type
      (string)))
  (command
    (enter))
  (command
    (sleep
      (time))))

================================================================================
Gum
================================================================================

Set FontFamily "Menlo"
Set FontSize 32
Output ./renders/gum.ascii
Output ./renders/gum.gif

Type "gum filter --no-limit --height 5"
Enter
Sleep 1s
Tab@500ms 4
Sleep 1s
Up 3
Sleep 500ms
Enter
Sleep 1s

--------------------------------------------------------------------------------

(program
  (command
    (set
      (setting
        (string))))
  (command
    (set
      (setting
        (float))))
  (command
    (output
      (path)))
  (command
    (output
      (path)))
  (command
    (type
      (string)))
  (command
    (enter))
  (command
    (sleep
      (time)))
  (command
    (tab
      (speed
        (time))
      (integer)))
  (command
    (sleep
      (time)))
  (command
    (up
      (integer)))
  (command
    (sleep
      (time)))
  (command
    (enter))
  (command
    (sleep
      (time))))

================================================================================
Demo
================================================================================

Output ./renders/demo.gif
Set FontSize 26
Set Height 600
Set Width 1200

Type "Hello, there!"
Sleep 500ms
Ctrl+C
Alt+C
Sleep 500ms
Type "Record terminal GIFs and test CLI apps."
Sleep 500ms
Ctrl+C
Sleep 500ms
Type "Let's try it out."
Sleep 500ms
Ctrl+U Sleep
500ms
Type "glow"
Sleep 100ms
Enter
Sleep 2s
Enter
Sleep 1s
Down@250ms 20
Type "q"
Sleep 2s

--------------------------------------------------------------------------------

(program
  (command
    (output
      (path)))
  (command
    (set
      (setting
        (float))))
  (command
    (set
      (setting
        (integer))))
  (command
    (set
      (setting
        (integer))))
  (command
    (type
      (string)))
  (command
    (sleep
      (time)))
  (command
    (control))
  (command
    (alt))
  (command
    (sleep
      (time)))
  (command
    (type
      (string)))
  (command
    (sleep
      (time)))
  (command
    (control))
  (command
    (sleep
      (time)))
  (command
    (type
      (string)))
  (command
    (sleep
      (time)))
  (command
    (control))
  (command
    (sleep
      (time)))
  (command
    (type
      (string)))
  (command
    (sleep
      (time)))
  (command
    (enter))
  (command
    (sleep
      (time)))
  (command
    (enter))
  (command
    (sleep
      (time)))
  (command
    (down
      (speed
        (time))
      (integer)))
  (command
    (type
      (string)))
  (command
    (sleep
      (time))))

================================================================================
Glow
================================================================================

Output vhs-glow.gif

Set Width 1600
Set Height 1040

Sleep 1s

Type "glow"

Sleep 100ms

Enter

Sleep 1s

Hide
  Tab
  Type "/artichoke"
  Enter
  Down 2
Show

Sleep 500ms

Down 20

Hide
  Escape
  Type "l"
  Down 5
Show

Sleep 1s
Up@400ms 5

Hide
  Type "/ulysses"
  Enter
Show

Sleep 500ms

Down@200ms 20

Hide
  Escape
  Type "/"
Show

Sleep 500ms

Type@500ms "todo"
Sleep 1s

Hide
  Escape
  Type "/ulysses"
  Enter
Show

Sleep 500ms

Type@750ms "????"

Hide
  Escape
  Type "/artichoke"
  Enter
  Type "m"
  Ctrl+A
  Right 4
Show

Sleep 1s
Type@250ms "Tasty "
Sleep 1s

Hide
  Escape
  Down 5
  Type "m"
  Ctrl+U
Show

Sleep 1s
Type@150ms "Your new internet thing"
Sleep 3s

Hide
  Ctrl+C
Show

--------------------------------------------------------------------------------

(program
  (command
    (output
      (path)))
  (command
    (set
      (setting
        (integer))))
  (command
    (set
      (setting
        (integer))))
  (command
    (sleep
      (time)))
  (command
    (type
      (string)))
  (command
    (sleep
      (time)))
  (command
    (enter))
  (command
    (sleep
      (time)))
  (command)
  (command
    (tab))
  (command
    (type
      (string)))
  (command
    (enter))
  (command
    (down
      (integer)))
  (command)
  (command
    (sleep
      (time)))
  (command
    (down
      (integer)))
  (command)
  (command
    (escape))
  (command
    (type
      (string)))
  (command
    (down
      (integer)))
  (command)
  (command
    (sleep
      (time)))
  (command
    (up
      (speed
        (time))
      (integer)))
  (command)
  (command
    (type
      (string)))
  (command
    (enter))
  (command)
  (command
    (sleep
      (time)))
  (command
    (down
      (speed
        (time))
      (integer)))
  (command)
  (command
    (escape))
  (command
    (type
      (string)))
  (command)
  (command
    (sleep
      (time)))
  (command
    (type
      (speed
        (time))
      (string)))
  (command
    (sleep
      (time)))
  (command)
  (command
    (escape))
  (command
    (type
      (string)))
  (command
    (enter))
  (command)
  (command
    (sleep
      (time)))
  (command
    (type
      (speed
        (time))
      (string)))
  (command)
  (command
    (escape))
  (command
    (type
      (string)))
  (command
    (enter))
  (command
    (type
      (string)))
  (command
    (control))
  (command
    (right
      (integer)))
  (command)
  (command
    (sleep
      (time)))
  (command
    (type
      (speed
        (time))
      (string)))
  (command
    (sleep
      (time)))
  (command)
  (command
    (escape))
  (command
    (down
      (integer)))
  (command
    (type
      (string)))
  (command
    (control))
  (command)
  (command
    (sleep
      (time)))
  (command
    (type
      (speed
        (time))
      (string)))
  (command
    (sleep
      (time)))
  (command)
  (command
    (control))
  (command))
